changes in resources and project rename

--- a/static-code-analysis/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE1.json
+++ b/static-code-analysis/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE1.json
@@ -9,8 +9,7 @@
   "tags": [
     "eco-design",
     "performance",
-    "bug",
-    "ecocode"
+    "code-smell"
   ],
   "defaultSeverity": "Minor"
 }
