--- a/static-code-analysis/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE4.json
+++ b/static-code-analysis/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE4.json
@@ -4,13 +4,12 @@
   "status": "ready",
   "remediation": {
     "func": "Constant\/Issue",
-    "constantCost": "5min"
+    "constantCost": "10min"
   },
   "tags": [
     "eco-design",
     "performance",
-    "bug",
-    "ecocode"
+    "code-smell"
   ],
   "defaultSeverity": "Minor"
 }
