--- a/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE2.json
+++ b/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE2.json
@@ -1,5 +1,5 @@
 {
-  "title": "Don't fetch the size of any collection in the loop to iterate",
+  "title": "Don't fetch the size and length of any collections type and array in the loop to iterate",
   "type": "CODE_SMELL",
   "status": "ready",
   "remediation": {
