--- a/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE1.json
+++ b/greenForLoops/src/main/resources/com/se4gd/sonar/l10n/java/rules/java/RE1.json
@@ -1,5 +1,5 @@
 {
-  "title": "Do00 not concatenate string inside loops. If you have to, use StringBuilder instead.",
+  "title": "Do not concatenate string inside loops. If you have to, use StringBuilder instead.",
   "type": "CODE_SMELL",
   "status": "ready",
   "remediation": {
